# HCJC

./: .gitignore  CLAUDE.md  CNAME  JCSTREAM_DESIGN_DEVIATION_REPORT.md  JCSTREAM_DESIGN_SPEC.md  README.md  SECURITY.md  _headers  index.html  pyproject.toml  requirements.txt
.claude/agents/: README.md  jcstream-a11y-auditor.md  jcstream-build-helper-author.md  jcstream-code-reviewer.md  jcstream-css-reviewer.md  jcstream-design-interpreter.md  jcstream-legal-copy-author.md  jcstream-orc-curator.md  jcstream-python-reviewer.md  jcstream-scraper-author.md  jcstream-security-reviewer.md  jcstream-stylesheet-author.md  jcstream-sweep-debugger.md  jcstream-template-author.md  jcstream-template-reviewer.md  jcstream-test-author.md
.claude/skills/: README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  case-data.yml  feature_request.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  codescan.yml  eslint.yml  ingest_case_data.yml  ossar.yml  osv-scanner.yml  pra_daily.yml  refresh_caselaw.yml  sweep.yml
audit/: 00_index.md  01_security_networking.md  02_parser_robustness.md  03_data_integrity.md  04_template_security.md  05_sweep_reliability.md  06_test_gap.md  07_html_accessibility.md  08_python_architecture.md  09_content_governance.md  10_css_a11y_performance.md  11_spa_structural_audit.md  12_cloudflare_pages_migration.md  13_sentry_instrumentation.md  14_hcso_waf.md  14a_runner_migration_patch.md  15_pra_149_43B_request.md  16_evidence_affidavit.md  17_mandamus_petition.md  18_offplatform_capture.md  19_counsel_cover_memo.md  2026-05-14_compact-redesign-session.md  README.md  _commit.txt  _pytest_baseline.txt  personal-skills-audit.md  skills-audit-pass2.md  skills-audit.md
audit/personal-skills/: claude-api.md  init.md  keybindings-help.md  loop.md  review.md  security-review.md  session-start-hook.md  simplify.md  update-config.md
audit/skills/: jcstream-a11y-auditor.md  jcstream-build-helper-author.md  jcstream-design-interpreter.md  jcstream-legal-copy-author.md  jcstream-scraper-author.md  jcstream-stylesheet-author.md  jcstream-sweep-debugger.md  jcstream-template-author.md  jcstream-test-author.md
audit/skills-pass2/: jcstream-a11y-auditor.md  jcstream-build-helper-author.md  jcstream-design-interpreter.md  jcstream-legal-copy-author.md  jcstream-orc-curator.md  jcstream-scraper-author.md  jcstream-stylesheet-author.md  jcstream-sweep-debugger.md  jcstream-template-author.md  jcstream-test-author.md
audits/personal-skills/: fewer-permission-prompts.md
audits/skills/: jcstream-orc-curator.md
data/: anon_changelog.json  cca_complaints_recent.json  cfs_pdi_recent.json  cfs_recent.json  changelog.json  crime_stars_recent.json  current.json  dispatch_correlations.json  explainers.json  history.json  incidents_recent.json  oi_shootings_recent.json  orc_caselaw.json  orc_offenses.json  pedestrian_stops_recent.json  shootings_recent.json  surnames.txt  traffic_stops_drivers_recent.json  use_of_force_incidents_recent.json  use_of_force_pdi_recent.json
docs/: CNAME  booked.xml  dispatches.json  feed.xml  humans.txt  index.html  manifest.webmanifest  released.xml  robots.txt  search.json
docs/.well-known/: security.txt
docs/court/: index.html
docs/courts/: index.html
docs/data/: SHA256SUMS  cca_complaints_recent.json  cfs_pdi_recent.json  cfs_recent.json  changelog.json  crime_stars_recent.json  current.json  history.json  incidents_recent.json  index.html  oi_shootings_recent.json  orc_offenses.json  pedestrian_stops_recent.json  shootings_recent.json  traffic_stops_drivers_recent.json  use_of_force_incidents_recent.json  use_of_force_pdi_recent.json
docs/help/: index.html
docs/static/: feed.xsl  main.js  (+2 more)
scraper/: __init__.py  cfs.py  cfs_pdi.py  cincy_open.py  client.py  correlate.py  courtclerk.py  egress_ip.py  freeze_alert.py  incidents.py  ingest_issue.py  match.py  models.py  open_data_feeds.py  orc.py  parsers.py  photos.py  pra.py  pra_base.py  pra_capias.py  shootings.py  store.py  sweep.py  sweep_guards.py  verify_block_log.py
scripts/: grep_waf_blocks.sh  local_sweep.sh  peek_hcso.sh  refresh_caselaw.py
tests/: test_build.py  test_cincy_open.py  test_classify.py  test_client.py  test_correlate.py  test_courtclerk.py  test_egress_ip.py  test_freeze_alert.py  test_ingest_issue.py  test_match.py  test_models.py  test_open_data.py  test_orc.py  test_parsers.py  test_photos.py  test_pra.py  test_pra_send.py  test_refresh_caselaw.py  test_shape.py  test_store.py  test_sweep.py
web/: __init__.py  build.py  classify.py  shape.py
wiki/: Architecture.md  Contributing.md  Data.md  Home.md  Legal.md  Operations.md  README.md  Roadmap.md  _Sidebar.md
(+1581 files in other folders)
