[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jcstream"
version = "0.1.0"
description = "Public-records mirror of the Hamilton County (Ohio) Justice Center inmate roster"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Pinned to match requirements.txt so `pip install -e .` and
    # `pip install -r requirements.txt` resolve identically. Bumps to
    # requirements.txt must also bump here.
    "httpx==0.28.1",
    "selectolax==0.3.34",
    "pydantic==2.10.6",
    "jinja2==3.1.6",
    "Pillow==12.2.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3"]

[tool.setuptools.packages.find]
include = ["scraper*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
