[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jcstream"
version = "0.1.0"
description = "Public-records mirror of the Hamilton County (Ohio) Justice Center inmate roster"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Pinned to match requirements.txt so `pip install -e .` and
    # `pip install -r requirements.txt` resolve identically. Bumps to
    # requirements.txt must also bump here.
    "httpx==0.28.1",
    "selectolax==0.3.34",
    "pydantic==2.10.6",
    "jinja2==3.1.6",
    "Pillow==12.2.0",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "ruff==0.14.2", "mypy==1.18.2"]

[tool.setuptools.packages.find]
include = ["scraper*", "web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, B flake8-bugbear (real bug
# patterns). SIM (flake8-simplify) is deliberately excluded: its "combine
# conditions" fixes directly worsen CodeScene's Complex Conditional metric
# (the two tools disagree), and CodeScene is the project's quality gate. UP
# (pyupgrade) is excluded as cosmetic timezone.utc churn with no safety gain.
select = ["E", "F", "I", "B"]
# E501 (line length) is not enforced: the codebase uses intentionally dense
# layouts (see CLAUDE.md), and line-length above is advisory for the formatter.
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
no_implicit_optional = true
# Type-check the bodies of functions even when they lack annotations, so a
# real type error in an un-annotated helper is caught. (Stricter than the
# default; full disallow_untyped_defs was skipped as low-value annotation
# churn — the tree already passes this with zero findings.)
check_untyped_defs = true
warn_redundant_casts = true
# Third-party libs without bundled stubs (or not type-checked in CI): ignore
# missing-import errors for them so mypy reports only first-party type issues.
[[tool.mypy.overrides]]
module = ["httpx", "selectolax.*", "PIL.*", "pydantic", "jinja2"]
ignore_missing_imports = true
